Added testName to each dataset used for testing in CalculateConsolidatedChartHeightTest.java for better understanding which test fails if such thing happens